Added a config setting for battle rng, which applies to both attack and defense

--- a/SimTECH/SimTECH/Pages/Racing/Race.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Race.razor
@@ -577,7 +577,10 @@
                 else if (!aboveDriver.InstantOvertaken)
                 {
                     // Subtract attack value from defense, what's left is how much the attacker is hindered
-                    var battleCost = aboveDriver.Defense - driver.Attack;
+                    var defendingResult = aboveDriver.Defense + NumberHelper.RandomInt(Model.BattleRng);
+                    var attackingResult = driver.Attack + NumberHelper.RandomInt(Model.BattleRng);
+                    var battleCost = defendingResult - attackingResult;
+
                     if (battleCost > 0)
                         lastScore.Score -= battleCost;
 
