--- a/SimTECH/SimTECH/Pages/Statistics/DriverDetailStat.razor
+++ b/SimTECH/SimTECH/Pages/Statistics/DriverDetailStat.razor
@@ -29,9 +29,9 @@
                 </MudPaper>
             </MudStack>
 
-            @if (loadedDriverData)
+            @if (selectedDriver != null)
             {
-                
+                <MudText>Selected is @(selectedDriver.FullName)</MudText>
             }
         </MudContainer>
     </DialogContent>
