--- a/SimTECH/SimTECH/Pages/Racing/PositionChangeChart.razor
+++ b/SimTECH/SimTECH/Pages/Racing/PositionChangeChart.razor
@@ -8,7 +8,7 @@
         <MudContainer Class="pa-4" Style="min-width: 800px">
             @if (!loading)
             {
-                <ApexCharts.ApexChart TItem="DataPoint" Title="Position progression" Options="@options" Height="550">
+                <ApexCharts.ApexChart TItem="DataPoint" Title="Position progression" Options="@options" Height="500">
                     @foreach (var driver in DataSets)
                     {
                         <ApexCharts.ApexPointSeries TItem="DataPoint"
@@ -17,9 +17,29 @@
                                             SeriesType="ApexCharts.SeriesType.Line"
                                             XValue="@(e => e.XData)"
                                             YValue="@(e => e.YData)"
-                                            OrderBy="e => e.X"
+                                            OrderBy="(e => e.X)"
                                             Stroke="@driver.Stroke" />
                     }
+
+                    @*<ApexCharts.ApexPointSeries TItem="DataPoint"
+                                                Items="@DnfSet.DataPoints"
+                                                Name="@DnfSet.Label"
+                                                SeriesType="ApexCharts.SeriesType.Area"
+                                                XValue="@(e => e.XData)"
+                                                YValue="@(e => e.YData)"
+                                                OrderBy="(e => e.X)"
+                                                Stroke="@DnfSet.Stroke" />*@
+                </ApexCharts.ApexChart>
+
+                <ApexCharts.ApexChart TItem="DataPoint" Title="Other" Options="@moreOptions" Height="300">
+                    <ApexCharts.ApexPointSeries TItem="DataPoint"
+                                                Items="@DnfSet.DataPoints"
+                                                Name="@DnfSet.Label"
+                                                SeriesType="ApexCharts.SeriesType.Area"
+                                                XValue="@(e => e.XData)"
+                                                YValue="@(e => e.YData)"
+                                                OrderBy="(e => e.X)"
+                                                Stroke="@DnfSet.Stroke" />
                 </ApexCharts.ApexChart>
             }
         </MudContainer>
@@ -33,13 +53,27 @@
     public List<RaceDriver> Drivers { get; set; }
 
     ApexCharts.ApexChartOptions<DataPoint> options;
+    ApexCharts.ApexChartOptions<DataPoint> moreOptions;
+
     List<DataSet> DataSets = new();
+    DataSet DnfSet = new()
+        {
+            Label = "DidNotFinish",
+            Stroke = new ApexCharts.SeriesStroke
+            {
+                Color = "#ff4d4d",
+                Width = 1,
+            },
+        };
 
     bool loading = true;
+    int driverCount;
 
     protected override void OnInitialized()
     {
         SetOptions();
+
+        driverCount = Drivers.Count;
 
         var positionData = DetermineLapPositions();
 
@@ -65,14 +99,48 @@
         loading = false;
     }
 
+    public void TestActionMutate(ApexCharts.DataPoint<DataPoint> dataPoint)
+    {
+        var originalValue = dataPoint.Y;
+    }
+
     private void SetOptions()
     {
         options = new ApexCharts.ApexChartOptions<DataPoint>
             {
+                Chart = new ApexCharts.Chart
+                {
+                    Animations = new ApexCharts.Animations
+                    {
+                        Enabled = false,
+                    },
+                },
                 Theme = new ApexCharts.Theme
                 {
                     Mode = ApexCharts.Mode.Dark,
+                },
+                Yaxis = new()
+                {
+                    new ApexCharts.YAxis
+                    {
+                        Reversed = true,
+                    },
                 }
+            };
+
+        moreOptions = new ApexCharts.ApexChartOptions<DataPoint>
+            {
+                Chart = new ApexCharts.Chart
+                {
+                    Animations = new ApexCharts.Animations
+                    {
+                        Enabled = false,
+                    },
+                },
+                Theme = new ApexCharts.Theme
+                {
+                    Mode = ApexCharts.Mode.Dark,
+                },
             };
     }
 
@@ -91,33 +159,23 @@
                         ResultId = driver.ResultId,
                         Order = lap.Order,
                         TotalScore = total,
-                        DidNotFinish = FailedToFinish(lap.RacerEvents)
+                        DidNotFinish = lap.HasDnfed(),
                     });
             }
         }
 
+        int dnfSum = 0;
         foreach (var lapData in positionData.GroupBy(e => e.Order))
         {
             int indexer = 0;
             foreach (var driverLap in lapData.OrderBy(e => e.DidNotFinish).ThenByDescending(e => e.TotalScore))
                 driverLap.Position = ++indexer;
+
+            dnfSum += lapData.Count(e => e.DidNotFinish);
+            DnfSet.DataPoints.Add(new DataPoint(lapData.Key, dnfSum));
         }
 
         return positionData;
-    }
-
-    private bool FailedToFinish(RacerEvent racerEvents)
-    {
-        if (racerEvents.HasFlag(RacerEvent.DriverDnf))
-            return true;
-        if (racerEvents.HasFlag(RacerEvent.CarDnf))
-            return true;
-        if (racerEvents.HasFlag(RacerEvent.EngineDnf))
-            return true;
-        if (racerEvents.HasFlag(RacerEvent.Death))
-            return true;
-
-        return false;
     }
 
     internal class DriverLapPosition
