--- a/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/AssignDriverTeams.razor
+++ b/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/AssignDriverTeams.razor
@@ -25,7 +25,7 @@
                                             <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-0">
                                                 <MudText>@seasonTeam.Name</MudText>
                                                 <MudSpacer />
-                                                <CountryFlag Code="@seasonTeam.Team.Country" />
+                                                <CountryFlag Code="@(seasonTeam.Team?.Country ?? Constants.DefaultCountry)" />
                                             </MudStack>
                                         </MudListSubheader>
                                         <MudDropZone T="EditSeasonDriverModel"
@@ -41,9 +41,9 @@
             <ItemRenderer>
                 <MudListItem>
                     <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-0">
-                        <MudText>@context.Driver.FullName</MudText>
+                        <MudText>@(context.Driver?.FullName)</MudText>
                         <MudSpacer />
-                        <CountryFlag Code="@context.Driver.Country" Size="FlagSize.Small" />
+                        <CountryFlag Code="@(context.Driver?.Country ?? Constants.DefaultCountry)" Size="FlagSize.Small" />
                     </MudStack>
                 </MudListItem>
             </ItemRenderer>
