--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -128,12 +128,6 @@ th {
     text-align: center;
 }
 
-/* page specific stylings */
-.result-cell {
-    border: 0.5px solid black !important;
-    color: black !important;
-}
-
 /* extensions on mudblazor css variables */
 .dialog-shadow {
     box-shadow: var(--mud-palette-secondary) 0 0 2em;
@@ -178,6 +172,14 @@ th {
 
 .font-subtitle2 {
     font-family: var(--mud-typography-subtitle2-family);
+}
+
+/* page specific stylings */
+
+/* season */
+.result-cell {
+    border: 0.5px solid black !important;
+    color: black !important;
 }
 
 /* default blazor css elements */
