--- a/SimTECH/SimTECH/Pages/Leagues/Leagues.razor
+++ b/SimTECH/SimTECH/Pages/Leagues/Leagues.razor
@@ -5,7 +5,7 @@
 
 <PageTitle>Leagues</PageTitle>
 
-<MudContainer>
+<MudContainer MaxWidth="MaxWidth.Large">
     <MudDataGrid T="League" Items="@LeagueData" Loading="_loading" LoadingProgressColor="Color.Info" Bordered="true" Class="my-2">
         <ToolBarContent>
             <MudText Typo="Typo.h4">Leagues</MudText>
@@ -19,8 +19,11 @@
             <TemplateColumn T="League" Sortable="false">
                 <CellTemplate>
                     <MudButtonGroup Size="Size.Small">
-                        <MudIconButton Icon="@Icons.Material.Outlined.Edit" OnClick="@(async () => await UpdateLeague(context.Item))" />
-                        <MudIconButton Icon="@Icons.Material.Outlined.Delete" Color="Color.Error" OnClick="@(async () => await DeleteLeague(context.Item))" />
+                        <MudIconButton Icon="@Icons.Material.Outlined.Edit"
+                                       OnClick="@(async () => await UpdateLeague(context.Item))" />
+                        <MudIconButton Icon="@Icons.Material.Outlined.Delete"
+                                       Color="Color.Error"
+                                       OnClick="@(async () => await DeleteLeague(context.Item))" />
                     </MudButtonGroup>
                 </CellTemplate>
             </TemplateColumn>
